--- a/cf_template-1.1.2/css/styles.css
+++ b/cf_template-1.1.2/css/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 *{
-	font-family: 'Open Sans', sherif;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .jumbotron{
