--- a/cf_template-1.1.5/css/styles.css
+++ b/cf_template-1.1.5/css/styles.css
@@ -75,14 +75,20 @@ body{
 	margin: 0 auto;
 	vertical-align: middle;
 	text-align: center;
+	padding-right: 0px;
+    padding-left: 0px;
 	
 }
 .header h1{
 	text-align: center;
+	padding: 2%;
+	background-color: #F5F5F5 ;
+	margin-top: 0;
 }
 .container p{
 	text-align: left;
-	margin: 0% 5%;
+	margin: 10% 3%;
+
 }
 /*.image{
 	display: inline-block;
@@ -94,7 +100,8 @@ body{
 	display: inline;
 }*/
 .column img{
-	width: 100%;
+	width: 50%;
+	height: 50%;
 
 }
 
