--- a/cf_template-1.1.5/css/styles.css
+++ b/cf_template-1.1.5/css/styles.css
@@ -22,13 +22,11 @@ body{
     text-decoration: none;
     font-size: 17px;
 }
-
 /* Change the color of links on hover */
 .topnav a:hover {
     background-color: #ddd;
     color: black;
 }
-
 /* Add a color to the active/current link */
 .topnav a.active {
     background-color: #4CAF50;
@@ -38,28 +36,29 @@ body{
 
 /*index.html*/
 
-
+/*sets up hero image and centers its content*/
 .jumbotron{
 	background-image: url("../img/heroCF.jpg");
 	background-size: cover;
-	text-align: center;
-	/*padding: 5%;*/
+	padding: 5% 0%;
 	margin-bottom: 0%;
 
 }
 
 .jumbotron h1 {
-	color: #fff;
-	text-align: center;
+	color: #fff;	
 }
 
-
+/*mission statement and description*/
 .mission-statement {
 	text-align: center;
-	padding: 5%;
+	padding: 2%;
 	background-image: black;
 	background-size: cover;
 	margin-bottom: 5%;
+}
+.mission-statement p{
+	margin-top: 2%;
 }
 
 .container-mission{
@@ -71,6 +70,7 @@ body{
 }
 /*END index.html*/
 
+/*sets up the columns ratio in about.html*/
 .container{
 	width: 100%;
 	margin: 0 auto;
@@ -91,15 +91,7 @@ body{
 	margin: 10% 3%;
 
 }
-/*.image{
-	display: inline-block;
-}*/
-/*.image img{
-	width: 100%;
-}*/
-/*.column{
-	display: inline;
-}*/
+
 .column img{
 	width: 50%;
 	height: 50%;
@@ -118,6 +110,7 @@ body{
 	margin: 5% auto;
 }
 
+/*sets up an all screen background image in contact*/
 #bg {
   position: fixed; 
   top: 50px; 
@@ -127,13 +120,17 @@ body{
   min-width: 100%;
   min-height: 100%;
 }
-/*.intro .column{
-	padding: 0 20px;
-}*/
 
+/*tweaks positioning of the contact h1 text*/
 #contact-h1{
 	padding: 5%;
 }
+/*sets up a footer for the images legal explanation in about.html*/
+footer{
+    background-color: #333;
+    overflow: hidden;
+}
+
 
 /*Typography*/
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
@@ -141,17 +138,18 @@ body{
 h1,
 h2, 
 h3 {
-	font-family: Futura, Helvetica, Arial, sans-serif;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 100;
 
 }}
 
 p,
 li {
-	font-family: Georgia, sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .intro p{
-	font-family: Futura, Helvetica, Arial, sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 3em;
 	-webkit-margin-before:0;
 }
@@ -166,20 +164,24 @@ li {
 .skill {
 	background-color: #5AD4C2 ;
 	color: #fff;
+	font-family: 'Open Sans', sans-serif;
 }
 
+/*big text in hero image and contact*/
 #contact-h1{
-	font-size: 5em;
+	font-size: 6em;
 	color: #fff;
 	text-transform: uppercase;
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 100;
+	letter-spacing: 7px;
 }
 
 #whitelink{
-	color: #fff;
+	color: #f2f2f2;
 }
 
-
-
-
-
-
+footer {
+	color:#fff;
+}
