--- a/cf_template-1.1.5/css/styles.css
+++ b/cf_template-1.1.5/css/styles.css
@@ -181,6 +181,11 @@ li {
 #whitelink{
 	color: #f2f2f2;
 }
+#tellink{
+	color: #f2f2f2;
+	font-weight: 300;
+	letter-spacing:2px;
+}
 
 footer {
 	color:#fff;
