--- a/cf_template-1.1.7/css/styles.css
+++ b/cf_template-1.1.7/css/styles.css
@@ -168,15 +168,27 @@ body{
 
 /*glyphicon tweaks*/
 
-.glyphicon{
+
+.glyphicon-phone-alt{
 	font-size: 1.5em;
 	color: #343434;
 	font-weight: 300;
-
 }
+.glyphicon-envelope{
+	font-size: 1.5em;
+	color: #343434;
+	font-weight: 300;
+}
+.glyphicon-map-marker{
+	font-size: 1.5em;
+	color: #343434;
+	font-weight: 300;
+}
+
 /*Glyphicon transition*/
 .column span:hover{
- color: #fff;
+ color: #F0E68C;
+ text-decoration: none;
 }
 
 
@@ -185,7 +197,15 @@ footer{
     background-color: #333;
     overflow: hidden;
 }
-
+/*setups the alignment for the contact info area*/
+#contact-info{
+text-align: left  ;
+width: 80%;
+padding-left: 20%;
+font-family: 'Open Sans', sans-serif;
+letter-spacing: 0px;
+color: #343434;
+}
 
 /*Typography*/
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
@@ -223,16 +243,54 @@ li {
 }
 
 /*big text in hero image and contact*/
-#contact-h1{
+#hero-h1{
 	font-size: 6em;
-	color: #343434;
+	color: #fff;
 	text-transform: uppercase;
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 100;
 	letter-spacing: 7px;
 	width: 100%;
-	padding-top: 15%;
+	padding-top: 10%;
+	padding-top: 10%;
+}
+/*Hero text for the contact screen*/
+#contact-h1{
+	font-size: 6em;
+	color: #fff;
+	text-transform: uppercase;
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 100;
+	letter-spacing: 7px;
+	width: 100%;
+	padding-top: 10%;
+	padding-top: 10%;
+	/*gradient background*/
+	background: #000428;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #004e92, #000428);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+}
+#questions-h1 {
+	font-size: 6em;
+	color: #fff;
+	text-transform: uppercase;
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 100;
+	letter-spacing: 7px;
+	width: 100%;
+	padding-top: 13%;
+	padding-bottom: 10%;
+	background-color: green;
+	/*gradient background*/
+	background: #cb2d3e;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #ef473a, #cb2d3e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
 }
 .row-for-info{
@@ -244,12 +302,7 @@ li {
 	width: 100%;
 	background-color: #e6e6e6;
 }
-#contact-info{
-text-align: left  ;
-width: 80%;
-padding-left: 20%;
-color: #343434;
-}
+
 .col-md-6 a{
 	color: #343434;
 }
@@ -258,11 +311,9 @@ color: #343434;
 	color: #fff;
 	text-decoration: none;
 
-#contact-info{
-	font-family: 'Open Sans', sans-serif;
-	letter-spacing: 0px;
-}
 
+
+/*gives colour to the footer's font on about.thml */
 footer {
 	color:#fff;
 }
