--- a/cf_template-1.1.8/css/styles.css
+++ b/cf_template-1.1.8/css/styles.css
@@ -44,6 +44,7 @@ body{
 	position: fixed;
 	width: 100%;
 	top: 0;
+	z-index: 1;
 }
 /*setting up the font color for the nav bar text*/
 .nav ul li a{
