--- a/cf_website_project_1/css/styles.css
+++ b/cf_website_project_1/css/styles.css
@@ -5,38 +5,11 @@ body{
 	margin:0px;
 }
 
-/*FAQ styling*/
-#FAQ{
-	width: 50%;
-}
-#headingOne, #headingTwo, #headingThree{
-	background-color: #343434;
-	color: white;
-}
- #headingOne a:hover{
-	color: #F0E68C;
-	-webkit-transition: 600ms;
-	text-decoration: none;
-	}
- #headingTwo a:hover{
-	color: #F0E68C;
-	-webkit-transition: 600ms;
-	text-decoration: none;
-	}
-
-  #headingThree a:hover{
-	color: #F0E68C;
-	-webkit-transition: 600ms;
-	text-decoration: none;
-	}
-
-/* END FAQ styling*/
-
 /* NAv Baar NEW*/
 .nav ul li {
 	display: inline-block;
 	padding: 20px 10px;
-	float: right;
+	float: left;
 }
 /*nav bar color, position etc*/
 .nav {
@@ -69,103 +42,68 @@ body{
 /*END NAV BAR*/
 /*index.html*/
 
-/*sets up hero image and centers its content*/
-.jumbotron{
-	background-image: url("../img/heroCF.jpg");
-	background-size: cover;
-	padding: 5% 0%;
-	margin-bottom: 0%;
-
-}
-
-.jumbotron h1 {
-	color: #fff;	
+/*carousel*/
+#carousel-example-generic{
+	margin-top:  -10%;
 }
 
 /*mission statement and description*/
-.mission-statement {
+#mission-statement {
 	text-align: center;
-	padding: 2%;
+	padding: 0% 5%;
 	background-image: black;
 	background-size: cover;
-	margin-bottom: 5%;
+	margin-bottom: 3%;
+	width: 100%;
+	
 }
-.mission-statement p{
-	margin-top: 2%;
+#mission-statement p{
+	padding-top: 1%;
 }
 
-.container-mission{
-  background-color: #f9f9f9;
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 0px;
-  padding-right: 0px;
+#container-mission{
+  padding: 2% 5%;
+ 
+  text-align: center;
 }
 /*END index.html*/
 
 /*sets up the columns ratio in about.html*/
-.container{
-	width: 100%;
-	margin: 0 auto;
-	vertical-align: middle;
-	text-align: center;
-	padding-right: 0px;
-    padding-left: 0px;
-    padding-top: 2%;
-	
-}
+
 .header h1{
 	text-align: center;
 	padding: 2%;
 	background-color: #F5F5F5 ;
 	margin-top: 0;
 }
-#current-year{
-	padding-top: 50px;
-}
-.container p{
-	text-align: left;
-	margin: 10% 3%;
-
-}
-
-.column img{
-	width: 50%;
-	height: 50%;
-
-}
-
-.column{
-	width: 30%;
-	display: inline-block;
-	vertical-align: middle;
-
-}
-.col-md-8{
+.current-year{
 	text-align: center;
+	background-color:#F5F5F5; 
 	width: 100%;
-	margin: 5% auto;
+	display: inline-block;
+	margin-top: 5%;
+	margin-bottom: 2%;
+}
+#img-about{
+	width: 100%;
+
+}
+#text-about{
+	padding-top: 5%;
+}
+#centered-description{
+	text-align: right;
 }
 
-/*sets up an all screen background image in contact*/
-#bg {
-  position: fixed; 
-  top: 60px; 
-  left: 0; 
-	
-  /* Preserve aspet ratio */
-  min-width: 100%;
-  min-height: 100%;
-}
+
 
 /*tweaks positioning of the contact h1 text*/
 #contact-h1{
 	padding-bottom: 5%;
 }
 /*used to control the contact box that contains the contact info*/
-.column{
-	align: left;
-}
+
+
 
 /*glyphicon tweaks*/
 
@@ -207,6 +145,58 @@ font-family: 'Open Sans', sans-serif;
 letter-spacing: 0px;
 color: #343434;
 }
+
+
+/*FAQ styling*/
+
+#questions-container{
+	width: 100%;
+	background-color: #fff; 
+
+}
+
+#FAQ{
+	width: 100%;
+	background-color: #F5F5F5;
+	
+}
+#accordion{
+	width: 100%;
+	text-align: center;
+}
+
+#headingOne, #headingTwo, #headingThree{
+	background-color: #343434;
+	color: white;
+}
+ #headingOne a:hover{
+	color: #F0E68C;
+	-webkit-transition: 600ms;
+	text-decoration: none;
+	}
+ #headingTwo a:hover{
+	color: #F0E68C;
+	-webkit-transition: 600ms;
+	text-decoration: none;
+	}
+
+  #headingThree a:hover{
+	color: #F0E68C;
+	-webkit-transition: 600ms;
+	text-decoration: none;
+	}
+
+/* END FAQ styling*/
+
+.footer{
+	background: #343434;
+	position: fixed;
+	width: 100%;
+	bottom: 0;
+	color: #fff;
+}
+
+
 
 /*Typography*/
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
@@ -253,31 +243,12 @@ li {
 	font-weight: 100;
 	letter-spacing: 7px;
 	width: 100%;
-	padding-top: 10%;
-	padding-top: 10%;
+	padding-bottom: 15%;
 }
 /*Hero text for the contact screen*/
 #contact-h1{
 	font-size: 6em;
-	color: #fff;
-	text-transform: uppercase;
-	text-align: center;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 100;
-	letter-spacing: 7px;
-	width: 100%;
-	padding-top: 10%;
-	padding-top: 10%;
-	/*gradient background*/
-	background: #000428;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #004e92, #000428);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
-}
-#questions-h1 {
-	font-size: 6em;
-	color: #fff;
+	color: #151616;
 	text-transform: uppercase;
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
@@ -286,36 +257,49 @@ li {
 	width: 100%;
 	padding-top: 13%;
 	padding-bottom: 10%;
-	background-color: green;
-	/*gradient background*/
-	background: #cb2d3e;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #ef473a, #cb2d3e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-
+}
+#questions-h1 {
+	font-size: 6em;
+	color: #151616;
+	text-transform: uppercase;
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 100;
+	letter-spacing: 7px;
+	width: 100%;
+	padding-top: 13%;
+	padding-bottom: 10%;
 }
 .row-for-info{
 	width: 100%
 	background-color:black;
 }
 #organiser-adress{
-	display: inline-block;
 	width: 100%;
 	background-color: #e6e6e6;
+	display: inline-block;
+	text-align: center;
+}
+#frame-adress{
+	padding:0% 15%;
+}
+.adress-align-left{
+	text-align: left;
+	padding: 0% 20%;
 }
 
-.col-md-6 a{
+#contact-column a{
 	color: #343434;
 }
 /*highlighted the hover over text*/
-.col-md-6 a:hover{
+#contact-column a:hover{
 	color: #fff;
 	text-decoration: none;
 
 
 
 /*gives colour to the footer's font on about.thml */
-footer {
-	color:#fff;
-}
+
+
 
